import from the other branch

--- a/src/characters/CharacterSheet/styles.sass
+++ b/src/characters/CharacterSheet/styles.sass
@@ -51,6 +51,21 @@
     input, select
         flex: 1
 
+.wor-per-level
+    display: flex
+    align-content: center
+    justify-content: end
+    align-items: center
+
+.wor-checkbox
+    display: flex
+    align-content: center
+    align-items: center
+    white-space: nowrap
+
+    input
+        margin-left: 0
+
 .wor-list
     margin: 0
     padding: 0
